<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/border_warning"
        android:fontFamily="@font/font_content"
        android:gravity="center"
        android:text="도움말"
        android:textColor="#000"
        android:textSize="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/help1_title"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/help1_subject1"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/help1_subject2"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/help1_content2"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/help1_subject3"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/help1_content3"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help1_subject4"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help1_subject5"
                    android:textSize="17dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/help2_title"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help2_subject1"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help2_subject2"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help2_subject3"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help2_subject4"
                    android:textSize="17dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/help3_title"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help3_subject1"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help3_subject2"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help3_subject3"
                    android:textSize="17dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/help3_subject4"
                    android:textSize="17dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/help_okbtn"
        android:fontFamily="@font/font_content"
        android:gravity="center"
        android:onClick="close"
        android:text="확인"
        android:textColor="#000"
        android:textSize="20dp" />

</LinearLayout>